# voksel

./: CMakeLists.txt
src/: glad.c  glad.h  main.cpp  rendering.cpp  rendering.h
